update usage, help and download

--- a/download.html
+++ b/download.html
@@ -17,8 +17,9 @@
       <h3>You can look for partclone at:</h3>
 	    <h4>Github</h4>
 	    <ul>
-		      <li><a href="https://github.com/Thomas-Tsai/partclone/tarball/master">Download <strong>TAR Ball</strong></a></li>
-		      <li><a href="https://github.com/Thomas-Tsai/partclone">View Source Code On <strong>GitHub</strong></a></li>
+		      <li><a href="https://github.com/Thomas-Tsai/partclone/tarball/stable">Download Stable TAR Ball</a></li>
+		      <li><a href="https://github.com/Thomas-Tsai/partclone/tarball/master">Download Master(not stable) TAR Ball</a></li>
+		      <li><a href="https://github.com/Thomas-Tsai/partclone">View Source Code</a></li>
 	    </ul>
 	    <h4>Debian Package</h4>
 	    <ul>
