--- a/help.html
+++ b/help.html
@@ -21,6 +21,7 @@
 	<h4>Documents</h4>
 	<ul>
 	    <li>The tech report in chinese zh-TW <a href="paper/partclone-tech-report-2011.pdf" alt="download pdf version of tech report">[PDF]</a></li>
+	    <li>more documents in wiki</li>
 	</ul>
 	<h4>Bug report</h4>
 	<ul>
