--- a/usage_all.html
+++ b/usage_all.html
@@ -13,7 +13,7 @@
       <section>
       <!-- Thie is start of edit area -->
 
-      <div id="usage">
+      <div id="usage-all">
         <h3>Welcome to Partclone Usage</h3>
 	<p>partclone.[ <a href="javascript:loadUsage('usage/partclone.xxxfs.8.html');">xxxfs</a> | <a href="javascript:loadUsage('usage/partclone.restore.8.html');">restore</a> | <a href="javascript:loadUsage('usage/partclone.dd.8.html');">dd</a> | <a href="javascript:loadUsage('usage/partclone.chkimg.8.html');">chkimg</a> | <a href="javascript:loadUsage('usage/partclone.info.8.html');">info</a> ]</p>
 	<div id=usage>
