1. update apply template rule 2. use xstproc convert man-xml to html

--- a/donate.html
+++ b/donate.html
@@ -1,17 +1,45 @@
 <!doctype html>
 <html>
   <head>
-    <script src="javascripts/jquery.js" type="text/javascript"></script>
-    <script src="javascripts/partclone.js" type="text/javascript"></script>
-    <script type="text/javascript">
-	updateHead();;
-    </script>
+        <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+        <meta name="author" content="Thomas Tsai" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+        <link href="http://freshmeat.net/projects/partclone/releases.atom" rel="alternate" title="freshmeat.net releases feed for Partclone" type="application/atom+xml" />
+        <link REL="SHORTCUT ICON" HREF="http://partclone.org/images/favicon.ico">
+        <link rel="stylesheet" href="stylesheets/styles.css">
+        <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+        <title>Partclone</title>
   </head>
   <body>
     <div class="wrapper">
-    <div id="header"></div>
+      <!-- The start of header block  -->
+      <div id="header">
+      <header>
+        <a href="index.html" alt="partclone home page"><img src="images/partclone-easy-logo.png" height="110" alt="partclone-logo" /></a>
+        <h1>Partclone</h1>
+        <p>Partclone provides utilities to smartly backup partitions. Partclone is written in C and designed for higher compatibility by using existing file system library.</p>
+	<ul>
+          <li><a href="https://github.com/Thomas-Tsai/partclone" target="blank" alt="View partclone source code on github">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/Thomas-Tsai/partclone/tarball/stable" alt="Download latest develop version">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="http://clonezilla.org" target="blank" alt="Clonezilla is based on partclone to image or clone a partition">Clonezilla<strong>TryOut</strong></a></li>
+	</ul>
+	
+	<p>
+	<a href="index.html">Home</a> | 
+	<a href="news.html">News</a> | 
+	<a href="features.html">Features</a> | 
+	<a href="usage_all.html">Usage</a> |
+	<a href="download.html">Download</a> |
+	<a href="help.html">Help</a> |
+	<a href="donate.html">Donation</a> |
+	<a href="credits.html">Crdits</a> 
+	</p>
+      </header>
+      </div>
+      <!-- The end of header block  -->
       <section>
-      <!-- Thie is start of edit area -->
+      <!-- The start of edit area 2cce8a -->
 
       <div id="donation">
 <h3>Donation</h3>
@@ -287,7 +315,7 @@ We want to say THANK YOU for all contributer, and list all received donation bel
 </ul>
       </div>
 
-      <!-- Thie is end of edit area -->
+      <!-- The end of edit area 2cce8a -->
       <script type="text/javascript">
       <!--
       google_ad_client = "pub-9507710613356481";
@@ -314,11 +342,15 @@ We want to say THANK YOU for all contributer, and list all received donation bel
       src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
       </script>
       </section>
-      <div id="footer"></div>
+      <!-- The start of footer block  -->
+      <div id="footer">
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/Thomas-Tsai">Thomas-Tsai</a>
+	Our other developers are Jazz Wang, Steven Shiau and Ceasar Sun. We release source code with GNU General Public License.<small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+      <!-- The end of footer block  -->
       </div>
-    <script type="text/javascript">
-	loadLayout();
-    </script>
     <script src="javascripts/scale.fix.js"></script>
     
   </body>
