--- a/usage_all.html
+++ b/usage_all.html
@@ -1,34 +1,62 @@
 <!doctype html>
 <html>
   <head>
-    <script src="javascripts/jquery.js" type="text/javascript"></script>
-    <script src="javascripts/partclone.js" type="text/javascript"></script>
-    <script type="text/javascript">
-	updateHead();;
-    </script>
+        <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+        <meta name="author" content="Thomas Tsai" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+        <link href="http://freshmeat.net/projects/partclone/releases.atom" rel="alternate" title="freshmeat.net releases feed for Partclone" type="application/atom+xml" />
+        <link REL="SHORTCUT ICON" HREF="http://partclone.org/images/favicon.ico">
+        <link rel="stylesheet" href="stylesheets/styles.css">
+        <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+        <title>Partclone</title>
   </head>
   <body>
     <div class="wrapper">
-    <div id="header"></div>
+      <!-- The start of header block  -->
+      <div id="header">
+      <header>
+        <a href="index.html" alt="partclone home page"><img src="images/partclone-easy-logo.png" height="110" alt="partclone-logo" /></a>
+        <h1>Partclone</h1>
+        <p>Partclone provides utilities to smartly backup partitions. Partclone is written in C and designed for higher compatibility by using existing file system library.</p>
+	<ul>
+          <li><a href="https://github.com/Thomas-Tsai/partclone" target="blank" alt="View partclone source code on github">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/Thomas-Tsai/partclone/tarball/stable" alt="Download latest develop version">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="http://clonezilla.org" target="blank" alt="Clonezilla is based on partclone to image or clone a partition">Clonezilla<strong>TryOut</strong></a></li>
+	</ul>
+	
+	<p>
+	<a href="index.html">Home</a> | 
+	<a href="news.html">News</a> | 
+	<a href="features.html">Features</a> | 
+	<a href="usage_all.html">Usage</a> |
+	<a href="download.html">Download</a> |
+	<a href="help.html">Help</a> |
+	<a href="donate.html">Donation</a> |
+	<a href="credits.html">Crdits</a> 
+	</p>
+      </header>
+      </div>
+      <!-- The end of header block  -->
       <section>
-      <!-- Thie is start of edit area -->
+      <!-- The start of edit area 2cce8a -->
 
       <div id="usage-all">
         <h3>Welcome to Partclone Usage</h3>
-	<p>partclone.[ <a href="javascript:loadUsage('usage/partclone.xxxfs.8.html');">xxxfs</a> | <a href="javascript:loadUsage('usage/partclone.restore.8.html');">restore</a> | <a href="javascript:loadUsage('usage/partclone.dd.8.html');">dd</a> | <a href="javascript:loadUsage('usage/partclone.chkimg.8.html');">chkimg</a> | <a href="javascript:loadUsage('usage/partclone.info.8.html');">info</a> ]</p>
+	<p>partclone.[ <a href="partclone.xml.html">[fstype]</a> | <a href="partclone.restore.xml.html">restore</a> | <a href="partclone.dd.xml.html">dd</a> | <a href="partclone.chkimg.xml.html">chkimg</a> | <a href="partclone.info.xml.html">info</a> ]</p>
 	<div id=usage>
-	<p>All partclone utilities named prefix partclone.blabla... It's just like mkfs.xxx or mount.xxx and easy to remember. The list is our man pages made from man2html or just run man partclone to access manual from linux system.</p>
+	<p>All partclone utilities named prefix partclone.blabla... It's just like mkfs.[fstype] or mount.[fstype] and easy to remember. The list is our man pages made from xsltproc or just run man partclone to access manual from linux system.</p>
 	<ul>
-	<li><a href="javascript:loadUsage('usage/partclone.xxxfs.8.html');">partclone.xxxfs</a> <br \>The man page is for all utilities name with end of [xxx]fs, e.g. reiserfs. All file system share same options and features.</li>
-	<li><a href="javascript:loadUsage('usage/partclone.restore.8.html');">partclone.restore</a><br \>The special man page for restore only.</li>
-	<li><a href="javascript:loadUsage('usage/partclone.dd.8.html');">partclone.dd</a><br \>The special man page for partclone.dd only.</li>
-	<li><a href="javascript:loadUsage('usage/partclone.chkimg.8.html');">partclone.chkimg</a><br \>The special man page for partclone.chkimg only.</li>
-	<li><a href="javascript:loadUsage('usage/partclone.info.8.html');">partclone.info</a><br \>The special man page for partclone.info only.</li>
+	<li><a href="partclone.xml.html">partclone.[fstype]</a> <br \>The man page is for all utilities name with end of [xxx]fs, e.g. reiserfs. All file system share same options and features.</li>
+	<li><a href="partclone.restore.xml.html">partclone.restore</a><br \>The special man page for restore only.</li>
+	<li><a href="partclone.dd.xml.html">partclone.dd</a><br \>The special man page for partclone.dd only.</li>
+	<li><a href="partclone.chkimg.xml.html">partclone.chkimg</a><br \>The special man page for partclone.chkimg only.</li>
+	<li><a href="partclone.info.xml.html">partclone.info</a><br \>The special man page for partclone.info only.</li>
 	</ul>
 	</div>
       </div>
 
-      <!-- Thie is end of edit area -->
+      <!-- The end of edit area 2cce8a -->
       <script type="text/javascript">
       <!--
       google_ad_client = "pub-9507710613356481";
@@ -55,11 +83,15 @@
       src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
       </script>
       </section>
-      <div id="footer"></div>
+      <!-- The start of footer block  -->
+      <div id="footer">
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/Thomas-Tsai">Thomas-Tsai</a>
+	Our other developers are Jazz Wang, Steven Shiau and Ceasar Sun. We release source code with GNU General Public License.<small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+      <!-- The end of footer block  -->
       </div>
-    <script type="text/javascript">
-	loadLayout();
-    </script>
     <script src="javascripts/scale.fix.js"></script>
     
   </body>
