--- a/partclone.chkimg.xml.html
+++ b/partclone.chkimg.xml.html
@@ -65,90 +65,9 @@
 </div>
 <div class="refsect1" title="DESCRIPTION">
 <a name="description"></a><h2>DESCRIPTION</h2>
-<p><span class="command"><strong>partclone.chkimg</strong></span> is a part of <span class="command"><strong>Partclone</strong></span> project to veritfy image file. Partclone provide utilities to backup used blocks and design for higher compatibility of the file system by using existing library, e.g. e2fslibs is used to read the used block of ext2 partition.</p>
-<p><span class="command"><strong>Partclone</strong></span> supported file system include btrfs, ext2, ext3, ext4, reiserfs, reiser4, xfs and jfs for LINUX. Also  support some non-linux operation system, ex: NTFS and  FAT (for Windows), HFS plus(APPLE MAC OS), UFS2(FreeBSD), VMFS(VMWare Vsphere).
-    </p>
-<p>All partclone utils could be run like partclone.xxx is very smiliar fsck or mkfs. For example, for backup/restore hfsplus, just run partclone.hfsp.
-    </p>
-<div class="segmentedlist">
-<div class="seglistitem">
-<div class="seg">
-<strong><span class="segtitle">File System: </span></strong>btrfs</div>
-<div class="seg">
-<strong><span class="segtitle">partclone.xxx: </span></strong>partclone.btrfs</div>
-</div>
-<div class="seglistitem">
-<div class="seg">
-<strong><span class="segtitle">File System: </span></strong>ext2 | ext3 | ext4</div>
-<div class="seg">
-<strong><span class="segtitle">partclone.xxx: </span></strong>partclone.ext2 | partclone.ext3 | partclone.ext4</div>
-</div>
-<div class="seglistitem">
-<div class="seg"><strong><span class="segtitle">File System: </span></strong></div>
-<div class="seg">
-<strong><span class="segtitle">partclone.xxx: </span></strong>partclone.extfs</div>
-</div>
-<div class="seglistitem">
-<div class="seg">
-<strong><span class="segtitle">File System: </span></strong>reiserfs 3.5</div>
-<div class="seg">
-<strong><span class="segtitle">partclone.xxx: </span></strong>partclone.reiserfs</div>
-</div>
-<div class="seglistitem">
-<div class="seg">
-<strong><span class="segtitle">File System: </span></strong>reiser 4</div>
-<div class="seg">
-<strong><span class="segtitle">partclone.xxx: </span></strong>partclone.reiser4</div>
-</div>
-<div class="seglistitem">
-<div class="seg">
-<strong><span class="segtitle">File System: </span></strong>xfs</div>
-<div class="seg">
-<strong><span class="segtitle">partclone.xxx: </span></strong>partclone.xfs</div>
-</div>
-<div class="seglistitem">
-<div class="seg">
-<strong><span class="segtitle">File System: </span></strong>ufs | ufs2</div>
-<div class="seg">
-<strong><span class="segtitle">partclone.xxx: </span></strong>partclone.ufs</div>
-</div>
-<div class="seglistitem">
-<div class="seg">
-<strong><span class="segtitle">File System: </span></strong>jfs</div>
-<div class="seg">
-<strong><span class="segtitle">partclone.xxx: </span></strong>partclone.jfs</div>
-</div>
-<div class="seglistitem">
-<div class="seg">
-<strong><span class="segtitle">File System: </span></strong>hfs plusfs</div>
-<div class="seg">
-<strong><span class="segtitle">partclone.xxx: </span></strong>partclone.hfs+ | partclone.hfsplus</div>
-</div>
-<div class="seglistitem">
-<div class="seg">
-<strong><span class="segtitle">File System: </span></strong>vmfs</div>
-<div class="seg">
-<strong><span class="segtitle">partclone.xxx: </span></strong>partclone.vmfs</div>
-</div>
-<div class="seglistitem">
-<div class="seg">
-<strong><span class="segtitle">File System: </span></strong>ntfs</div>
-<div class="seg">
-<strong><span class="segtitle">partclone.xxx: </span></strong>partclone.ntfs</div>
-</div>
-<div class="seglistitem">
-<div class="seg">
-<strong><span class="segtitle">File System: </span></strong>fat12 | fat16 | fat32</div>
-<div class="seg">
-<strong><span class="segtitle">partclone.xxx: </span></strong>partclone.fat12 | partclone.fat16 | partclone.fat32</div>
-</div>
-<div class="seglistitem">
-<div class="seg"><strong><span class="segtitle">File System: </span></strong></div>
-<div class="seg">
-<strong><span class="segtitle">partclone.xxx: </span></strong>partclone.vfat</div>
-</div>
-</div>
-<p>
+<p><span class="command"><strong>partclone.chkimg</strong></span> is a part of <span class="command"><strong>Partclone</strong></span> project to veritfy image file. 
+    Partclone provide utilities to backup used blocks and design for higher compatibility of the file system by using existing library, e.g. e2fslibs is used to read the used block of ext2 partition.</p>
+<p><span class="command"><strong>Partclone</strong></span> supported file system include btrfs, ext2, ext3, ext4, reiserfs, reiser4, xfs and jfs for LINUX. Also  support some non-linux operation system, ex: NTFS and  FAT (for Windows), HFS plus(APPLE MAC OS), UFS2(FreeBSD), VMFS(VMWare Vsphere). All partclone utils could be run like partclone.xxx is very smiliar fsck or mkfs. For example, for backup/restore hfsplus, just run partclone.hfsp.
     </p>
 </div>
 <div class="refsect1" title="OPTIONS">
