--- a/usage_all.html
+++ b/usage_all.html
@@ -45,7 +45,7 @@
         <h3>Welcome to Partclone Usage</h3>
 	<p>partclone.[ <a href="partclone.xml.html">[fstype]</a> | <a href="partclone.restore.xml.html">restore</a> | <a href="partclone.dd.xml.html">dd</a> | <a href="partclone.chkimg.xml.html">chkimg</a> | <a href="partclone.info.xml.html">info</a> ]</p>
 	<div id=usage>
-	<p>All partclone utilities named prefix partclone.blabla... It's just like mkfs.[fstype] or mount.[fstype] and easy to remember. The list is our man pages made from xsltproc or just run man partclone to access manual from linux system.</p>
+	<p>All partclone utilities named prefix partclone.blabla... It's just like mkfs.[fstype] or mount.[fstype] and easy to remember. The list is our man pages made from xsltproc or just run man partclone to access manual from linux system.</p><img src="images/man-page-screen.png" style="float: right; margin: 12px" />
 	<ul>
 	<li><a href="partclone.xml.html">partclone.[fstype]</a> <br \>The man page is for all utilities name with end of [xxx]fs, e.g. reiserfs. All file system share same options and features.</li>
 	<li><a href="partclone.restore.xml.html">partclone.restore</a><br \>The special man page for restore only.</li>
