update manual page

--- a/partclone.info.xml.html
+++ b/partclone.info.xml.html
@@ -41,6 +41,8 @@
       <section>
       <!-- The start of edit area 2cce8a -->
 
+<h3>Welcome to Partclone Usage</h3>
+<p>partclone.[ <a href="partclone.xml.html">[fstype]</a> | <a href="partclone.restore.xml.html">restore</a> | <a href="partclone.dd.xml.html">dd</a> | <a href="partclone.chkimg.xml.html">chkimg</a> | <a href="partclone.info.xml.html">info</a> ]</p>
 <a name="idp84816"></a><div class="titlepage"></div>
 <div class="refnamediv">
 <h2>Name</h2>
@@ -115,7 +117,7 @@
 <div class="refsect1" title="SEE ALSO">
 <a name="see_also"></a><h2>SEE ALSO</h2>
 <p>
-    <span class="citerefentry"><span class="refentrytitle">partclone.chkimg</span>(8)</span>, <span class="citerefentry"><span class="refentrytitle">partclone.restore</span>(8)</span>, <span class="citerefentry"><span class="refentrytitle">partclone.dd</span>(8)</span>, <span class="citerefentry"><span class="refentrytitle">partclone.info</span>(8)</span>
+    <span class="citerefentry"><span class="refentrytitle"><a href="partclone.xml.html" alt="manual of partclone">partclone</a></span>(8)</span>, <span class="citerefentry"><span class="refentrytitle"><a href="partclone.chkimg.xml.html" alt="manual of partclone.chkimg">partclone.chkimg</a></span>(8)</span>, <span class="citerefentry"><span class="refentrytitle"><a href="partclone.restore.xml.html" alt="manual of partclone.restore">partclone.restore</a></span>(8)</span>, <span class="citerefentry"><span class="refentrytitle"><a href="partclone.dd.xml.html" alt="manual of partclone.dd">partclone.dd</a></span>(8)</span>, <span class="citerefentry"><span class="refentrytitle"><a href="partclone.info.xml.html" alt="manual of partclone.info">partclone.info</a></span>(8)</span>
       </p>
 </div>
 
