--- a/donate.html
+++ b/donate.html
@@ -63,6 +63,8 @@ We want to say THANK YOU for all contributer, and list all received donation bel
 -->
 <br /><strong>May 2012</strong><br />
 <ul>
+<li> May - 31 <a href="http://naplesrentals.net" target="_blank">Naples Florida Property Management</a></li>
+<li> May - 31 <a href="http://www.b2b-trade.de" target="_blank">B2B Trade</a></li>
 <li> May - 18 <a href="http://www.bipolartreatmentcenters.net/" target="_blank">best bipolar treatment centers</a></li>
 </ul>
 <br /><strong>April 2012</strong><br />
