--- a/donate.html
+++ b/donate.html
@@ -61,6 +61,11 @@ We want to say THANK YOU for all contributer, and list all received donation bel
 <li> - <a href="" target="_blank"></a></li>
 </ul>
 -->
+<br /><strong>June 2012</strong><br />
+<ul>
+<li> Jun - 05 <a href="http://exclusivebinaryoptions.com/" target="_blank">Exclusive Binary Options </a></li>
+<li> Jun - 01 <a href="http://www.usenet1.de" target="_blank">Usenet1.de</a></li>
+</ul>
 <br /><strong>May 2012</strong><br />
 <ul>
 <li> May - 31 <a href="http://naplesrentals.net" target="_blank">Naples Florida Property Management</a></li>
