--- a/donate.html
+++ b/donate.html
@@ -112,7 +112,7 @@ We want to say THANK YOU for all contributer, and list all received donation bel
 <br /><strong>December 2011</strong><br />
 <ul>
 <li> Dec 31 - <a href="http://www.pokercheck.org/" target="_blank">PokerCheck</a></li>
-<li> Dec 30 - <a href="http://www.fancydresshero.co.uk" target="_blank">Fancy Dress</a></li>
+<!-- <li> Dec 30 - <a href="http://www.fancydresshero.co.uk" target="_blank">Fancy Dress</a></li> -->
 <li> Dec 22 - <a href="http://www.treppenliftdirekt.de" target="_blank">Treppenlifte</a></li>
 <li> Dec 17 - <a href="http://www.residentialtreatmentcenter.net/" target="_blank">Residential Treatment Centers</a></li>
 <li> Dec 17 - <a href="http://www.beverlyhillscosmeticsurgeon.com/" target="_blank">beverly hills plastic surgeon</a></li>
