Donation from paypal $id

--- a/donate.html
+++ b/donate.html
@@ -63,6 +63,7 @@ We want to say THANK YOU for all contributer, and list all received donation bel
 -->
 <br /><strong>June 2012</strong><br />
 <ul>
+<li> Jun - 08 <a href="http://www.magneticpulsers.com/" target="_blank">Visit www.magneticpulsers.com</a></li>
 <li> Jun - 06 <a href="http://prepaid-tarife-vergleichen.de/" target="_blank">prepaid-tarife-vergleichen.de</a></li>
 <li> Jun - 03 <a href="http://exclusivebinaryoptions.com/" target="_blank">Exclusive Binary Options </a></li>
 <li> Jun - 01 <a href="http://www.usenet1.de" target="_blank">Usenet1.de</a></li>
