add exfat information and man pages

--- a/features.html
+++ b/features.html
@@ -113,6 +113,11 @@
 	    <td>partclone.fat32 or partclone.vfat</td>
 	    </tr>
 	    <tr>
+	    <td>exFAT</td>
+	    <td>http://code.google.com/p/exfat/</td>
+	    <td>partclone.exfat</td>
+	    </tr>
+	    <tr>
 	    <td>HFS plus</td>
 	    <td>X(ref:HFS Plus Volume Format)</td>
 	    <td>partclone.hfsplus , partclone.hfsp or partclone.hfs+</td>
