--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
 	partclone.btrfs
 	partclone.ext2, partclone.ext3, partclone.ext4
 	partclone.fat32, partclone.fat12, partclone.fat16
+	partclone.ntfs
+	partclone.extfs
 	partclone.hfsp
 	partclone.jfs
-	partclone.ntfs
 	partclone.reiserfs
 	partclone.reiser4
 	partclone.ufs (with SU+J)
