--- a/partclone.info.xml.html
+++ b/partclone.info.xml.html
@@ -43,38 +43,13 @@
 
 <h3>Welcome to Partclone Usage</h3>
 <p>partclone.[ <a href="partclone.xml.html">[fstype]</a> | <a href="partclone.restore.xml.html">restore</a> | <a href="partclone.dd.xml.html">dd</a> | <a href="partclone.chkimg.xml.html">chkimg</a> | <a href="partclone.info.xml.html">info</a> ]</p>
-<a name="idp84792"></a><div class="titlepage"></div>
-<div class="refnamediv">
-<h2>Name</h2>
-<p>partclone.info —  The utility to show image head information.</p>
-</div>
-<div class="refsynopsisdiv" title="Synopsis">
-<h2>Synopsis</h2>
-<div class="cmdsynopsis"><p><code class="command">partclone.info</code>  {
 	<em class="replaceable"><code>FILE</code></em>
-      }</p></div>
-</div>
-<div class="refsect1" title="DESCRIPTION">
-<a name="description"></a><h2>DESCRIPTION</h2>
-<p><span class="command"><strong>partclone.info</strong></span> is a part of <span class="command"><strong>Partclone</strong></span> project to retrive partition head information from image file. 
+      }</p></div></div><div class="refsect1" title="DESCRIPTION"><a name="description"></a><h2>DESCRIPTION</h2><p><span class="command"><strong>partclone.info</strong></span> is a part of <span class="command"><strong>Partclone</strong></span> project to retrive partition head information from image file. 
     
-    Partclone provide utilities to backup used blocks and design for higher compatibility of the file system by using existing library, e.g. e2fslibs is used to read the used block of ext2 partition.</p>
-<p><span class="command"><strong>Partclone</strong></span> supported file system include btrfs, ext2, ext3, ext4, reiserfs, reiser4, xfs and jfs for LINUX. Also  support some non-linux operation system, ex: NTFS and  FAT (for Windows), HFS plus(APPLE MAC OS), UFS2(FreeBSD), VMFS(VMWare Vsphere). All partclone utils could be run like partclone.xxx is very smiliar fsck or mkfs. For example, for backup/restore hfsplus, just run partclone.hfsp.
-    </p>
-</div>
-<div class="refsect1" title="OPTIONS">
-<a name="options"></a><h2>OPTIONS</h2>
-<p>The program follows the usual GNU command line syntax,
+    Partclone provide utilities to backup used blocks and design for higher compatibility of the file system by using existing library, e.g. e2fslibs is used to read the used block of ext2 partition.</p><p><span class="command"><strong>Partclone</strong></span> supported file system include btrfs, ext2, ext3, ext4, reiserfs, reiser4, xfs and jfs for LINUX. Also  support some non-linux operation system, ex: NTFS and  FAT (for Windows), HFS plus(APPLE MAC OS), UFS2(FreeBSD), VMFS(VMWare Vsphere). All partclone utils could be run like partclone.xxx is very smiliar fsck or mkfs. For example, for backup/restore hfsplus, just run partclone.hfsp.
+    </p></div><div class="refsect1" title="OPTIONS"><a name="options"></a><h2>OPTIONS</h2><p>The program follows the usual GNU command line syntax,
       with long options starting with two dashes (`-').  A summary of
-      options is included below.</p>
-<div class="variablelist"><dl>
-<dt><span class="term"><code class="option"><em class="replaceable"><code>FILE</code></em></code></span></dt>
-<dd><p>Image FILE. The FILE could be a image file(made by partclone).</p></dd>
-</dl></div>
-</div>
-<div class="refsect1" title="EXAMPLES">
-<a name="examples"></a><h2>EXAMPLES</h2>
-<pre class="screen">
+      options is included below.</p><div class="variablelist"><dl><dt><span class="term"><code class="option"><em class="replaceable"><code>FILE</code></em></code></span></dt><dd><p>Image FILE. The FILE could be a image file(made by partclone).</p></dd></dl></div></div><div class="refsect1" title="EXAMPLES"><a name="examples"></a><h2>EXAMPLES</h2><pre class="screen">
   Retriving partition usage information
     partclone.info /home/partimag/sdb2.img
     Partclone v0.2.20 http://partclone.org
@@ -84,42 +59,10 @@
     Free Space:   392.6 MB
     Block size:   4096 Byte
     Used block :  130708
-    </pre>
-</div>
-<div class="refsect1" title="DIAGNOSTICS">
-<a name="diagnostics"></a><h2>DIAGNOSTICS</h2>
-<p>The following diagnostics may be issued
-      on <code class="filename">stderr</code>:</p>
-<p><span class="command"><strong>partclone.info</strong></span> provides some return codes, that can
-      be used in scripts:</p>
-<div class="segmentedlist">
-<div class="seglistitem">
-<div class="seg">
-<strong><span class="segtitle">Code: </span></strong><span class="errorcode">0</span>
-</div>
-<div class="seg">
-<strong><span class="segtitle">Diagnostic: </span></strong>Program exited successfully.</div>
-</div>
-<div class="seglistitem">
-<div class="seg">
-<strong><span class="segtitle">Code: </span></strong><span class="errorcode">1</span>
-</div>
-<div class="seg">
-<strong><span class="segtitle">Diagnostic: </span></strong>Clone or Restore seem failed.</div>
-</div>
-</div>
-</div>
-<div class="refsect1" title="BUGS">
-<a name="bugs"></a><h2>BUGS</h2>
-<p>Report bugs to thomas@nchc.org.tw or <a class="ulink" href="http://partclone.org" target="_top">http://partclone.org</a>.</p>
-<p>You can get support at http://partclone.org</p>
-</div>
-<div class="refsect1" title="SEE ALSO">
-<a name="see_also"></a><h2>SEE ALSO</h2>
-<p>
+    </pre></div><div class="refsect1" title="DIAGNOSTICS"><a name="diagnostics"></a><h2>DIAGNOSTICS</h2><p>The following diagnostics may be issued
+      on <code class="filename">stderr</code>:</p><p><span class="command"><strong>partclone.info</strong></span> provides some return codes, that can
+      be used in scripts:</p><div class="segmentedlist"><div class="seglistitem"><div class="seg"><strong><span class="segtitle">Code: </span></strong><span class="errorcode">0</span></div><div class="seg"><strong><span class="segtitle">Diagnostic: </span></strong>Program exited successfully.</div></div><div class="seglistitem"><div class="seg"><strong><span class="segtitle">Code: </span></strong><span class="errorcode">1</span></div><div class="seg"><strong><span class="segtitle">Diagnostic: </span></strong>Clone or Restore seem failed.</div></div></div></div><div class="refsect1" title="BUGS"><a name="bugs"></a><h2>BUGS</h2><p>Report bugs to thomas@nchc.org.tw or <a class="ulink" href="http://partclone.org" target="_top">http://partclone.org</a>.</p><p>You can get support at http://partclone.org</p></div><div class="refsect1" title="SEE ALSO"><a name="see_also"></a><h2>SEE ALSO</h2><p>
     <span class="citerefentry"><span class="refentrytitle"><a href="partclone.xml.html" alt="manual of partclone">partclone</a></span>(8)</span>, <span class="citerefentry"><span class="refentrytitle"><a href="partclone.chkimg.xml.html" alt="manual of partclone.chkimg">partclone.chkimg</a></span>(8)</span>, <span class="citerefentry"><span class="refentrytitle"><a href="partclone.restore.xml.html" alt="manual of partclone.restore">partclone.restore</a></span>(8)</span>, <span class="citerefentry"><span class="refentrytitle"><a href="partclone.dd.xml.html" alt="manual of partclone.dd">partclone.dd</a></span>(8)</span>, <span class="citerefentry"><span class="refentrytitle"><a href="partclone.info.xml.html" alt="manual of partclone.info">partclone.info</a></span>(8)</span>
-      </p>
-</div>
 
       <!-- The end of edit area 2cce8a -->
       <script type="text/javascript">
