--- a/partclone.restore.xml.html
+++ b/partclone.restore.xml.html
@@ -63,7 +63,7 @@
 	 [ <code class="option">-R</code>  |   <code class="option">--rescue</code> ]
 	 [ <code class="option">-L</code>  |   <code class="option">--logfile</code> ]
 	<em class="replaceable"><code>logfile</code></em>
-	]</p></div></div><div class="refsect1" title="DESCRIPTION"><a name="description"></a><h2>DESCRIPTION</h2><p><span class="command"><strong>partclone.restore</strong></span> is a part of <span class="command"><strong>Partclone</strong></span> project to restore all image made from partclone.[fstype] or partclone.dd.
+	]<div class="refsect1" title="DESCRIPTION"><a name="description"></a><h2>DESCRIPTION</h2><p><span class="command"><strong>partclone.restore</strong></span> is a part of <span class="command"><strong>Partclone</strong></span> project to restore all image made from partclone.[fstype] or partclone.dd.
     Partclone provide utilities to backup used blocks and design for higher compatibility of the file system by using existing library, e.g. e2fslibs is used to read the used block of ext2 partition.</p><p><span class="command"><strong>Partclone</strong></span> supported file system include btrfs, ext2, ext3, ext4, reiserfs, reiser4, xfs and jfs for LINUX. Also  support some non-linux operation system, ex: NTFS and  FAT (for Windows), HFS plus(APPLE MAC OS), UFS2(FreeBSD), VMFS(VMWare Vsphere). All partclone utils could be run like partclone.xxx is very smiliar fsck or mkfs. For example, for backup/restore hfsplus, just run partclone.hfsp.
     </p></div><div class="refsect1" title="OPTIONS"><a name="options"></a><h2>OPTIONS</h2><p>The program follows the usual GNU command line syntax,
       with long options starting with two dashes (`-').  A summary of
