--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
       <div id="index">
         <h3>Welcome to Partclone</h3>
 	<p>Partclone is a project similar to the well-known backup utility "Partition Image" a.k.a partimage. Partclone provides utilities to back up and restore used-blocks of a partition and it is designed for higher compatibility of the file system by using existing library, e.g. e2fslibs is used to read and write the ext2 partition.</p>
-	<p>Partclone now supports ext2, ext3, hfs+, reiser3.5, reiser3.6, reiser4, ext4 and btrfs.We made some utilies:</p>
+	<p>Partclone now supports ext2, ext3, ext4, hfs+, reiser3.5, reiser3.6, reiser4, btrfs, vmfs, xfs, jfs, ufs, ntfs, fat(12/16/32), exfat. We made some utilies:</p>
 	<pre>
 	partclone.btrfs
 	partclone.ext2, partclone.ext3, partclone.ext4
 	partclone.fat32, partclone.fat12, partclone.fat16
 	partclone.ntfs
-	partclone.extfs
+	partclone.exfat
 	partclone.hfsp
 	partclone.jfs
 	partclone.reiserfs
