Donation from paypal 0PD09376R1573224R

--- a/donate.html
+++ b/donate.html
@@ -63,6 +63,7 @@ We want to say THANK YOU for all contributer, and list all received donation bel
 -->
 <br /><strong>August 2012</strong><br />
 <ul>
+<li> Aug - 31 <a href="http://www.wpcoupon.net/wordpress-hosting-coupon-codes/" target="_blank">wordpress hosting coupons</a></li>
 <li> Aug - 23 <a href="http://www.livetipsportal.com" target="_blank">Livetipsportal.com</a></li>
 </ul>
 <br /><strong>June 2012</strong><br />
